--- a/style.css
+++ b/style.css
@@ -270,15 +270,10 @@ h6 {
 	position:relative;
 	font: 13px "Times New Roman", "Times", serif;
 	color: #111;
-	padding-left:20px;
 	margin-left:0px;
-	border: 1px solid #aaa;
 	margin-top:20px;
 	margin-bottom:20px;
 	width:598px;
-	-webkit-box-shadow:0px 4px 8px rgba(0,0,0,0.4);
-	-moz-box-shadow:0px 4px 8px rgba(0,0,0,0.4);
-	box-shadow:0px 4px 8px rgba(0,0,0,0.4);
 }
 
 #filterExample p {
@@ -327,29 +322,22 @@ h6 {
 	display:none;
 }
 
-.v_stepPlot {
+.FilterStepPlot {
 	position:absolute;
 	display:none;
 }
 
-.v_timePlot {
+.FilterTimePlot {
 	position:absolute;
 	display:none;
 }
 
-.v_polePlot {
+.FilterPolePlot {
 	position:absolute;
 	display:none;
 }
 
-.v_audioPlayer {
-	width:1px;
-	height:1px;
-	margin:0;
-	padding:0;
-}
-
-.filterFreqPlot canvas {
+.filterFreqPlot {
 	position:relative;
 	width:256px;
 	height:128px;
@@ -374,7 +362,7 @@ h6 {
 	pointer-events:none;
 }
 
-.c_filterKnobHelp {
+.FilterKnobHelp {
 	position:absolute;
 	display:none;
 	left:0px;
@@ -383,17 +371,6 @@ h6 {
 	font: 11px "Times New Roman", "Times", serif;
 	font-style: italic;
 	pointer-events:none;
-}
-
-#filterAudioSwitch {
-	background-image:url(Media/FilterRockOff.png);
-	width:166px;
-	height:34px;
-	margin-left:30px;
-	margin-right:24px;
-	margin-top:6px;
-	cursor:pointer;
-	float:left;
 }
 
 .cursorDrag {
