--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ body {
 }
 
 #header h1 {
-  font: 46px "BorisBlackBloxx", "Helvetica", sans-serif;
+  font: 46px "BorisBlackBloxxRegular", "Helvetica", sans-serif;
   color: #fff;
   position:absolute;
   left: 35px;
